--- a/firebase-node-backend/views/layout/sidebar.ejs
+++ b/firebase-node-backend/views/layout/sidebar.ejs
@@ -28,6 +28,14 @@
                 </a>
             </li>
             <li>
+                <a href="/admin/featured-section"
+                    class="menu-item flex items-center space-x-3 px-4 py-3 rounded-lg text-gray-700">
+                    <i class="fas fa-chart-line text-lg"></i>
+                    <span class="font-medium">Featured Section</span>
+                </a>
+            </li>
+
+            <li>
                 <a href="/admin/mood" class="menu-item flex items-center space-x-3 px-4 py-3 rounded-lg text-gray-700">
                     <i class="fas fa-smile text-lg"></i>
                     <span class="font-medium">Mood Tracking</span>
@@ -52,6 +60,13 @@
                     class="menu-item flex items-center space-x-3 px-4 py-3 rounded-lg text-gray-700">
                     <i class="fas fa-cog text-lg"></i>
                     <span class="font-medium">Settings</span>
+                </a>
+            </li>
+            <li>
+                <a href="/admin/profile"
+                    class="menu-item flex items-center space-x-3 px-4 py-3 rounded-lg text-gray-700">
+                    <i class="fas fa-user-plus text-lg"></i>
+                    <span class="font-medium">My Profile</span>
                 </a>
             </li>
         </ul>
